fix message button alignment

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -440,7 +440,7 @@ input#search{
 
 .search-form{
   background-color: #f5f7fa;
-  margin-top: 15%;
+  margin-top: 20%;
   width: 90%;
   margin-left: 5%;
   padding-top: 1%;
@@ -574,6 +574,13 @@ input.block_button{
   margin-left: 55%;
   margin-top: -18%;
 
+}
+
+button.message-to-button{
+  margin-left: 10%;
+  width: 35%;
+  background-color: #9fed9c;
+  color: #31343F;
 }
 
 #profile-aboutme{
@@ -735,10 +742,10 @@ textarea#message_message.reply_message_message{
   background-color: white;
 }
 
-
 textarea#message_message{
   height: 3rem;
   background-color: #31343f;
+  color:white;
 }
 
 .recipient_id{
@@ -1200,7 +1207,7 @@ textarea#message_message{
 
    input.block_button{
      margin-left: 55%;
-     margin-top: -8.7%;
+     margin-top: -9%;
      background-color: #e06c75;
      color: white;
      width: 16%;
@@ -1679,7 +1686,13 @@ textarea#message_message{
   }
 
   //---------------Desktop MailBox Styles-------------//
+  button.message-to-button{
+    margin-left: 37%;
+    width: 16%;
+    background-color: #9fed9c;
+    color: #31343F;
 
+  }
 
   .reply{
     background-color: #9fed9c;
@@ -1967,7 +1980,7 @@ textarea#message_message{
     }
   }
   #profile-info-container{
-    padding-bottom: 2.5%;
+    padding-bottom:6%;
     margin-top: -3%;
   }
   button.message-and-request-button{
@@ -1992,14 +2005,14 @@ textarea#message_message{
     height: 250px;
   }
   input.block_button{
-    margin-top: -6%;
+    margin-top: -4.5%;
   }
   #profile-name{
     margin-top: -15%;
   }
   #profile-languages{
-    margin-top: -20.5%;
-    height: 240px;
+    margin-top: -16.5%;
+    height: 275px;
   }
 
   .line-break{
@@ -2036,7 +2049,7 @@ textarea#message_message{
   }
 
   .footer{
-    margin-top: 12.5%;
+    margin-top: 27%;
   }
 
   input#search_city{
